--- a/docs/ds/21/951-21-ques.md
+++ b/docs/ds/21/951-21-ques.md
@@ -19,7 +19,7 @@ date: 2024-4-5
 - C.2n
 - D.n^2
 
-3.设指针变量p指向单链表中结点 A，若除单链表中结点 A，则需要修改指针的操作序列为（）
+3.设指针变量 p 指向单链表中结点 A，若除单链表中结点 A，则需要修改指针的操作序列为（）
 
 - A.q=p->next; p->data=q-data; p->next=q->next; free(q);
 - B.q=p->next; q->data=p->data; p->next=q->next; free(q);
@@ -45,10 +45,10 @@ date: 2024-4-5
 - A.rear = rear+1
 
 - C.rear = (rear+1) % (m+1)
-- B.rear = (rear+1)% m
-- D.rear = (rear+1) %(m-l)
+- B.rear = (rear+1) % m
+- D.rear = (rear+1) % (m-l)
 
-7.假设用数组A[50]存放循环队列元素，头尾指针 front 和 rear，front=13， rear=5 时循环队列中元素的个数为（）
+7.假设用数组`A[50]`存放循环队列元素，头尾指针 front 和 rear，front=13， rear=5 时循环队列中元素的个数为（）
 
 - A.42
 
@@ -56,7 +56,7 @@ date: 2024-4-5
 - C.43
 - D.9
 
-8.设串 s1=“ABCDEFG”，s2=“PQRST” 函数 Con(x, y) 返回 x 和 y 串的连接串，函数 Subs(s, i, j) 返回串 s 的从序号 i 开始的 j 个字符的子串，len(s) 返回串 s 的长度，则 Con(Subs(s1, 2, len(s2)), Subs(s1, len(s2), 2))的结果串是（）
+8.设串 s1=“ABCDEFG”，s2=“PQRST” 函数 Con(x, y) 返回 x 和 y 串的连接串，函数 Subs(s, i, j) 返回串 s 的从序号 i 开始的 j 个字符的子串，len(s) 返回串 s 的长度，则 Con(Subs(s1, 2, len(s2)), Subs(s1, len(s2), 2)) 的结果串是（）
 
 - A.BCDEF
 - B.BCDEFG
@@ -179,4 +179,126 @@ date: 2024-4-5
 15.已知一个有序表 (13，18，24，35，47，50，62，83，90，115，134)，当二分查找值为 90 的元素时，查找成功的比较次数为（）
 
 ## 问题求解（45）
+
+1.(7分) 有5个元素，其入栈次序为 A、B、C、D、E，在各种出次序中，第一个出栈元素是 C 且第二个出栈元素为 D 的出栈序列有哪几个？
+
+2.(7分) 一颗高度为 h 的满 m 树 (m 可以为2)有如下性质：根结点所在层次为第 1 层，第 h 层上的结点都是叶子结点，其余各层上每层结点都有 m 棵非空子树，如果按照层次自顶向下、同一层自左向右的顺序从 1 开始对全部结点进行编号，问
+
+- (1) 各层的结点个数是多少？
+- (2) 编号为 i 的结点的双亲结点(若存在)的编号是多少？
+
+3.(8分) 已知某有向带权图 11 个节点的连接方式如下表示，以节点3为出发点，使用 Diikstra 算法求其最短路径并写出其动态执行情况，填写下表，其中 U 表示选定的节点集合，`D[i]`表示源点到节点i的距离，`p[i]`表示源点到节点 i 时，节点 i 的前驱节点
+
+<img src="./assets/image-20240406112427595.png">
+
+4.(8分) 已知一个无向图如下图所示，给出从顶点 1 出发用 kruskal 算法生成所有可能的最小生成树的过程
+
+<img src="./assets/image-20240406112508899.png">
+
+5.(7分) 设散列表的度为 15，散列函数为 H(k) = k%13，给定的关键序列为19，14，23，01，68，20，84，27，55，11，10，79。试画出用线性探查法解决冲突时所构造的散列表，并求出在等概率情况下，这种方法的查找成功和查找不成功的平均查找长度
+
+6.(8分) 已知序列 (503，87，512，61，908，170，897，275，653，462)，采用二路归并排序法对其进行排序，并写出排序过程
+
+## 算法设计（30）
+
+1.(10分) 设计一个算法，将表中所有节点的方向“原地旋转”，要求利用原表的存储空间。例如：L = {0，2，4，6，8，10}，逆转后为 L = (10，8，6，4，2，0}
+
+```c
+void Inverse(LinkList *L){
+    LinkList p, q;
+    ____①____
+    L->next = NULL;
+    while(____②____){
+        q = p->next;
+        ____③____;
+        ____④____;
+        ____⑤____;
+    }
+}
+```
+
+2.(10分) 请写出先序遍历的递归算法
+
+```c
+typedef struct TreeNode{
+    int data;
+    struct TreeNode *lChild;
+    struct TreeNode *rChild;
+}TreeNode;
+
+void preOrder (TreeNode *T){
+    TreeNode *stack [15];
+    int top = -l;
+    TreeNode*p = T;
+    while(____①____){
+        if(p != NULL){
+            stack[____②____] = p; // 进栈
+            printf("%d\t", p->data); // 入栈时，访问输出
+            p = ____③____;
+        } else {
+            p = stack[____④____]; // 出栈
+            p = ____⑤____;
+        }
+    }
+}
+```
+
+3.(10分) 设计一个算法，将一个无向图的邻接矩阵转换为邻接表。已知邻接矩阵和邻接，表的结构定义如下
+
+```c
+// 邻接矩阵
+#define Maxsize 10
+tpyedef char vextype;
+struct AdjMatrix{
+    vextype vexs[Maxsize];//存放顶点的数组
+    int arc[Maxsize][Maxsize];//存放边的数组
+    int vertexNum, arcNum;//图的顶点和边数
+}
+
+// 邻接表
+#define Maxsize 10
+typedef struct node{ //邻接链表结点
+    int adjvex;//邻接点域
+    struct node *next;//链域
+}edgenode;
+
+typedef struct{
+    vextype vertex;//顶点域
+    edgenode *link;//指针域
+}vexnode;
+
+struct AdjList{
+    vexnode adjlist[Maxsize]:
+    int vertexNum, arcNum;//图的顶点和边数
+};
+```
+
+补全如下程序，完成邻接矩阵转为邻接表算法
+
+```c
+void MatToList(struct AdjMatrix A, struct AdjList B){
+    B.vertexNum = ____①____;
+    B.arcNum = ____②____;
+    for(i = 0; i < A.vertexNum; i++){
+        B.adjlist[i].vertex = ____③____;
+        ____④____;
+    }
+    for(i = 0; i < A.vertexNum; i++){
+        for(j = 0; j < i; j++){
+            if(A.arc[i][i] != 0){
+                p=(edgenode*)malloc(sizeof(edgenode)):
+                ____⑤____;
+                ____⑥____;
+                ____⑦____;
+                p=(edgenode*)malloc(sizeof(edgenode));
+                ____⑧____;
+                ____⑨____;
+                ____⑩____;
+            }
+        }
+    }
+}
+```
+
+
 
