--- a/docs/cn/19/952-19-ques.md
+++ b/docs/cn/19/952-19-ques.md
@@ -5,9 +5,9 @@ date: 2024-1-8
 
 ## 填空（1/20）
 
-1.一个典型的数据通信系统包括五个组成部分，分别是: 报文、发送方、接收方、传输介质和（）
+1.一个典型的数据通信系统包括五个组成部分，分别是：报文、发送方、接收方、传输介质和（）
 
-2.网络拓扑结构包括四种基本类型，分别是:网状、（）、（）和环状
+2.网络拓扑结构包括四种基本类型，分别是：网状、（）、（）和环状
 
 3.在使用OSI网络模型的数据传输过程中，在每一层，数据单元可能被加上头部或者尾部，通常仅在（）层加上尾部
 
