--- a/docs/crypto/23/953-23-ques.md
+++ b/docs/crypto/23/953-23-ques.md
@@ -143,7 +143,7 @@ date: 2024-2-1
 
 15.Kerckhoff 说过系统的保密性不依赖于对加密体制或算法的保密,而依赖于（）
 
-16.在 RSA 的公钥密码体制中，公钥为 (e，n) = (13,35)，计算得出私 d = （）
+16.在 RSA 的公钥密码体制中，公钥为 (e，n) = (13,35)，计算得出私钥 d = （）
 
 ## 简答
 
